@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 7303455a44341c1c9137cc8b85db7e4e4c6ec3bb ChangeLog
+SHA1 741f4d750797ba03cf16953ec29dee3805d5bda9 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 59cc1df5f78f1306b256f97cc0618d3ced1d5e6f META.yml
+SHA1 598e5dba7464e89aa29cd944c16f02aa16b539c5 META.yml
 SHA1 14e358b68232b26478c491ba66290d4dc07ae02a Makefile.PL
 SHA1 dd0ef50a94b1bbe303b0f05c353dfe97cda04f3b README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 d4ab311fdbe91eead71e1fea24f9620fbae00f02 lib/Term/Menus.pm
+SHA1 e1b9e031b907caf2e7022043ed0d3d316c4b277c lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk1Nhk0ACgkQdsVAdUjO9ImNGACfS6uX4e3SoyBNKqdGvgu0dp3a
-0wUAnjfQpmkLcQ3rxo33Mu4UuRQ3aJIe
-=51QM
+iEYEARECAAYFAk1ZvEwACgkQdsVAdUjO9IlGLgCfYVV+O0Y5RTrUdhkouFJZSjJn
+jjEAn1tkJBOUnxdeqmP0LTCLc3Wa4Gku
+=Rxoi
 -----END PGP SIGNATURE-----
